--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
     <string name="text_dismiss">Dismiss</string>
     <string name="title_activity_menu_detail">MenuDetailActivity</string>
-    <string name="title_activity_remark">RemarkActivity</string>
+    <string name="title_activity_remark">Food Remark</string>
 </resources>
